--- a/src/MAVN.Service.SmartVouchers.AzureRepositories/MAVN.Service.SmartVouchers.AzureRepositories.csproj
+++ b/src/MAVN.Service.SmartVouchers.AzureRepositories/MAVN.Service.SmartVouchers.AzureRepositories.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,11 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
-    <PackageReference Include="Lykke.Common.MsSql" Version="2.4.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
+    <PackageReference Include="Lykke.AzureStorage" Version="8.13.4" />
   </ItemGroup>
 
   <ItemGroup>
