--- a/src/MAVN.Service.SmartVouchers/Dockerfile
+++ b/src/MAVN.Service.SmartVouchers/Dockerfile
@@ -1,4 +1,4 @@
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /app
 COPY . .
-ENTRYPOINT ["dotnet", "Lykke.Service.SmartVouchers.dll"]
+ENTRYPOINT ["dotnet", "MAVN.Service.SmartVouchers.dll"]
