--- a/src/MAVN.Service.SmartVouchers/MAVN.Service.SmartVouchers.csproj
+++ b/src/MAVN.Service.SmartVouchers/MAVN.Service.SmartVouchers.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="LykkeBiz.Sdk" Version="1.0.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.13.1" />
+    <PackageReference Include="StackExchange.Redis" Version="2.1.30" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\client\MAVN.Service.SmartVouchers.Client\MAVN.Service.SmartVouchers.Client.csproj" />
