--- a/contract/MAVN.Service.SmartVouchers.Contract/MAVN.Service.SmartVouchers.Contract.csproj
+++ b/contract/MAVN.Service.SmartVouchers.Contract/MAVN.Service.SmartVouchers.Contract.csproj
@@ -5,28 +5,28 @@
     <Version>1.0.1</Version>
     <Authors>Lykke</Authors>
     <Company>LykkeBisiness</Company>
-    <Description>Contract for the Lykke.Service.SmartVouchers</Description>
-    <PackageLicenseUrl>https://github.com/LykkeBusinessPlatform/Lykke.Service.SmartVouchers/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/LykkeBusinessPlatform/Lykke.Service.SmartVouchers</PackageProjectUrl>
+    <Description>Contract for the MAVN.Service.SmartVouchers</Description>
+    <PackageLicenseUrl>https://github.com/OpenMAVN/MAVN.Service.SmartVouchers/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/OpenMAVN/MAVN.Service.SmartVouchers</PackageProjectUrl>
     <PackageIconUrl>https://avatars3.githubusercontent.com/u/14153330?v=3&amp;amp;s=200</PackageIconUrl>
-    <RepositoryUrl>https://github.com/LykkeBusinessPlatform/Lykke.Service.SmartVouchers.git</RepositoryUrl>
+    <RepositoryUrl>https://github.com/OpenMAVN/MAVN.Service.SmartVouchers.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>LykkeBiz;SmartVouchers</PackageTags>
-    <PackageId>LykkeBiz.Service.SmartVouchers.Contract</PackageId>
+    <PackageTags>MAVN;SmartVouchers</PackageTags>
+    <PackageId>MAVN.Service.SmartVouchers.Contract</PackageId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netstandard2.0\Lykke.Service.SmartVouchers.Contract.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\netstandard2.0\MAVN.Service.SmartVouchers.Contract.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\netstandard2.0\Lykke.Service.SmartVouchers.Contract.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\netstandard2.0\MAVN.Service.SmartVouchers.Contract.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup Label="dotnet pack instructions">
-    <Content Include="$(OutputPath)Lykke.Service.SmartVouchers.Contract.pdb">
+    <Content Include="$(OutputPath)MAVN.Service.SmartVouchers.Contract.pdb">
       <Pack>true</Pack>
       <PackagePath>lib/netstandard2.0</PackagePath>
     </Content>
