--- a/src/MAVN.Job.SmartVouchers/MAVN.Job.SmartVouchers.csproj
+++ b/src/MAVN.Job.SmartVouchers/MAVN.Job.SmartVouchers.csproj
@@ -1,38 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <Version>1.0.1</Version>
     <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
     <AspNetCoreModuleName>AspNetCoreModuleV2</AspNetCoreModuleName>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <NoWarn>1701;1702;1705;1591</NoWarn>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>1701;1702;1705;1591</NoWarn>
-  </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="Controllers\**" />
+    <EmbeddedResource Remove="Controllers\**" />
+    <None Remove="Controllers\**" />
+  </ItemGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Dockerfile">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="LykkeBiz.Sdk" Version="1.0.0" />
-    <PackageReference Include="MAVN.Common.MsSql" Version="3.0.0" />
-    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.14.0" />
-    <PackageReference Include="StackExchange.Redis" Version="2.1.30" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.13.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\client\MAVN.Service.SmartVouchers.Client\MAVN.Service.SmartVouchers.Client.csproj" />
     <ProjectReference Include="..\MAVN.Service.SmartVouchers.AzureRepositories\MAVN.Service.SmartVouchers.AzureRepositories.csproj" />
     <ProjectReference Include="..\MAVN.Service.SmartVouchers.DomainServices\MAVN.Service.SmartVouchers.DomainServices.csproj" />
     <ProjectReference Include="..\MAVN.Service.SmartVouchers.MsSqlRepositories\MAVN.Service.SmartVouchers.MsSqlRepositories.csproj" />
