--- a/contract/MAVN.Service.SmartVouchers.Contract/MAVN.Service.SmartVouchers.Contract.csproj
+++ b/contract/MAVN.Service.SmartVouchers.Contract/MAVN.Service.SmartVouchers.Contract.csproj
@@ -32,4 +32,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MAVN.Numerics" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
