--- a/src/MAVN.Service.SmartVouchers/MAVN.Service.SmartVouchers.csproj
+++ b/src/MAVN.Service.SmartVouchers/MAVN.Service.SmartVouchers.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Dockerfile">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
