--- a/settings.yaml
+++ b/settings.yaml
@@ -81,3 +81,6 @@ PaymentManagementServiceClient:
 PartnerManagementServiceClient:
     ServiceUrl:
         settings-key: PartnerManagementServiceUrl
+CustomerProfileServiceClient:
+    ServiceUrl:
+        settings-key: CustomerProfileServiceUrl
