--- a/src/MAVN.Service.SmartVouchers.Domain/MAVN.Service.SmartVouchers.Domain.csproj
+++ b/src/MAVN.Service.SmartVouchers.Domain/MAVN.Service.SmartVouchers.Domain.csproj
@@ -5,5 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Lykke.Common" Version="7.5.0" />
+    <PackageReference Include="MAVN.Service.CustomerProfile.Client" Version="2.0.0" />
   </ItemGroup>
 </Project>
