--- a/src/MAVN.Service.SmartVouchers/MAVN.Service.SmartVouchers.csproj
+++ b/src/MAVN.Service.SmartVouchers/MAVN.Service.SmartVouchers.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Lykke.Logs" Version="7.4.0" />
     <PackageReference Include="LykkeBiz.Sdk" Version="1.0.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.14.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.1.30" />
