--- a/src/MAVN.Job.SmartVouchers/MAVN.Job.SmartVouchers.csproj
+++ b/src/MAVN.Job.SmartVouchers/MAVN.Job.SmartVouchers.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Lykke.Logs" Version="7.4.0" />
     <PackageReference Include="LykkeBiz.Sdk" Version="1.0.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.13.1" />
   </ItemGroup>
