--- a/src/MAVN.Service.SmartVouchers.MsSqlRepositories/MAVN.Service.SmartVouchers.MsSqlRepositories.csproj
+++ b/src/MAVN.Service.SmartVouchers.MsSqlRepositories/MAVN.Service.SmartVouchers.MsSqlRepositories.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
-    <PackageReference Include="MAVN.Common.MsSql" Version="3.0.0" />
+    <PackageReference Include="MAVN.Persistence.PostgreSQL.Legacy" Version="1.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
